fix: group with background should has padding on mobile

--- a/src/scss/wordpress-global/_spacing.scss
+++ b/src/scss/wordpress-global/_spacing.scss
@@ -14,6 +14,10 @@
 			> .alignfull,
 			> .alignwide {
 				@apply px-0;
+
+				&.has-background {
+					@apply px-16;
+				}
 			}
 		}
 	}
